fixing layout bugs

--- a/css/index.css
+++ b/css/index.css
@@ -512,7 +512,7 @@ body {
 	height: 90% !important;
 }
 .game-features__list {
-	transform: translateX(26%);
+	transform: translateX(26.1%);
 }
 .game-features__navigation {
 	position: static;
@@ -876,7 +876,7 @@ body {
 	background-color: #121212;
 }
 .no-children-container {
-	width: 100vw;
+	width: 100%;
 	height: 100px;
 	margin: 0 auto;
 	padding: 30px 0;
@@ -1013,6 +1013,15 @@ body {
 	display: inline-block;
 	margin: 0 auto;
 }
+.featured-news__splide.featured-news {
+	width: 80vw;
+}
+.featured-news .img-wrap {
+	height: 290px !important;
+}
+.featured-news .featured-item__heading {
+	font-size: 28px;
+}
 /* links and btns state */
 .hero__btn:focus > img,
 .cta__btn:focus > img {
@@ -1141,16 +1150,16 @@ body {
 		padding: 80px 80px 100px;
 	}
 	.article__img {
-		margin-bottom: 80px;
+		margin-bottom: 40px;
 	}
 	.article__heading {
-		font-size: 44px;
-	}
-	.article__text {
 		font-size: 34px;
 	}
+	.article__text {
+		font-size: 24px;
+	}
 	.article > .news-item__meta {
-		font-size: 32px;
+		font-size: 24px;
 	}
 	.community {
 		background-size: cover;
